// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`align defaults to left 1`] = `
<table>
  <thead>
    <tr>
      <td
        class="euiTableHeaderCell emotion-euiTableHeaderCell"
        role="columnheader"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
        >
          <span
            class="eui-textTruncate"
          />
        </div>
      </td>
    </tr>
  </thead>
</table>
`;

exports[`align renders center when specified 1`] = `
<table>
  <thead>
    <tr>
      <td
        class="euiTableHeaderCell emotion-euiTableHeaderCell"
        role="columnheader"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-center-euiTableHeaderCell__content"
        >
          <span
            class="eui-textTruncate"
          />
        </div>
      </td>
    </tr>
  </thead>
</table>
`;

exports[`align renders right when specified 1`] = `
<table>
  <thead>
    <tr>
      <td
        class="euiTableHeaderCell emotion-euiTableHeaderCell"
        role="columnheader"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-right-euiTableHeaderCell__content"
        >
          <span
            class="eui-textTruncate"
          />
        </div>
      </td>
    </tr>
  </thead>
</table>
`;

exports[`renders EuiTableHeaderCell 1`] = `
<table>
  <thead>
    <tr>
      <th
        aria-label="aria-label"
        class="euiTableHeaderCell testClass1 testClass2 emotion-euiTableHeaderCell-euiTestCss"
        data-test-subj="test subject string"
        role="columnheader"
        scope="col"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
        >
          <span
            class="eui-textTruncate"
            title="children"
          >
            children
          </span>
        </div>
      </th>
    </tr>
  </thead>
</table>
`;

exports[`renders td when children is null/undefined 1`] = `
<table>
  <thead>
    <tr>
      <td
        aria-label="aria-label"
        class="euiTableHeaderCell testClass1 testClass2 emotion-euiTableHeaderCell-euiTestCss"
        data-test-subj="test subject string"
        role="columnheader"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
        >
          <span
            class="eui-textTruncate"
          />
        </div>
      </td>
    </tr>
  </thead>
</table>
`;

exports[`sorting does not render a button with readOnly 1`] = `
<table>
  <thead>
    <tr>
      <th
        aria-live="polite"
        aria-sort="descending"
        class="euiTableHeaderCell emotion-euiTableHeaderCell"
        role="columnheader"
        scope="col"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
        >
          <span
            class="eui-textTruncate"
            title="Test"
          >
            Test
          </span>
          <span
            class="euiTableSortIcon"
            data-euiicon-type="sortDown"
          />
        </div>
      </th>
    </tr>
  </thead>
</table>
`;

exports[`sorting is rendered with isSortAscending 1`] = `
<table>
  <thead>
    <tr>
      <th
        aria-live="polite"
        aria-sort="ascending"
        class="euiTableHeaderCell emotion-euiTableHeaderCell"
        role="columnheader"
        scope="col"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
        >
          <span
            class="eui-textTruncate"
            title="Test"
          >
            Test
          </span>
          <span
            class="euiTableSortIcon"
            data-euiicon-type="sortUp"
          />
        </div>
      </th>
    </tr>
  </thead>
</table>
`;

exports[`sorting is rendered with isSorted 1`] = `
<table>
  <thead>
    <tr>
      <th
        aria-live="polite"
        aria-sort="descending"
        class="euiTableHeaderCell emotion-euiTableHeaderCell"
        role="columnheader"
        scope="col"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
        >
          <span
            class="eui-textTruncate"
            title="Test"
          >
            Test
          </span>
          <span
            class="euiTableSortIcon"
            data-euiicon-type="sortDown"
          />
        </div>
      </th>
    </tr>
  </thead>
</table>
`;

exports[`sorting renders a button with onSort 1`] = `
<table>
  <thead>
    <tr>
      <th
        aria-live="polite"
        aria-sort="descending"
        class="euiTableHeaderCell emotion-euiTableHeaderCell"
        role="columnheader"
        scope="col"
      >
        <button
          class="euiTableHeaderButton euiTableHeaderButton-isSorted emotion-euiTableHeaderCell__button"
          data-test-subj="tableHeaderSortButton"
          type="button"
        >
          <div
            class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
          >
            <span
              class="eui-textTruncate"
              title="Test"
            >
              Test
            </span>
            <span
              class="euiTableSortIcon"
              data-euiicon-type="sortDown"
            />
          </div>
        </button>
      </th>
    </tr>
  </thead>
</table>
`;

exports[`width and style accepts style attribute 1`] = `
<table>
  <thead>
    <tr>
      <th
        class="euiTableHeaderCell emotion-euiTableHeaderCell"
        role="columnheader"
        scope="col"
        style="width: 20%;"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
        >
          <span
            class="eui-textTruncate"
            title="Test"
          >
            Test
          </span>
        </div>
      </th>
    </tr>
  </thead>
</table>
`;

exports[`width and style accepts width attribute 1`] = `
<table>
  <thead>
    <tr>
      <th
        class="euiTableHeaderCell emotion-euiTableHeaderCell"
        role="columnheader"
        scope="col"
        style="width: 10%;"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
        >
          <span
            class="eui-textTruncate"
            title="Test"
          >
            Test
          </span>
        </div>
      </th>
    </tr>
  </thead>
</table>
`;

exports[`width and style accepts width attribute as number 1`] = `
<table>
  <thead>
    <tr>
      <th
        class="euiTableHeaderCell emotion-euiTableHeaderCell"
        role="columnheader"
        scope="col"
        style="width: 100px;"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
        >
          <span
            class="eui-textTruncate"
            title="Test"
          >
            Test
          </span>
        </div>
      </th>
    </tr>
  </thead>
</table>
`;

exports[`width and style resolves style and width attribute 1`] = `
<table>
  <thead>
    <tr>
      <th
        class="euiTableHeaderCell emotion-euiTableHeaderCell"
        role="columnheader"
        scope="col"
        style="width: 10%;"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
        >
          <span
            class="eui-textTruncate"
            title="Test"
          >
            Test
          </span>
        </div>
      </th>
    </tr>
  </thead>
</table>
`;
